--- a/signup.html
+++ b/signup.html
@@ -29,6 +29,8 @@
             <form class="form1" >
               <input class="term_box" id="em" type="email" placeholder="Enter Email..." name="" value="">
               <input class="term_box" id="pw" placeholder="Create Password..." type="password" name="" value="">
+              <p class="info_text2" >Enter your Address Below...</p>
+              <textarea  class="term_box" rows="3" cols="50" ></textarea>
               <div class="filter-labels">
                 <input class="cb" type="radio" name="gender" id="rb0" value="" checked>
                 <label for="rb0" value="Male" >Male</label>
